sandbox/output
MedicineClashTest.java:28: error: ';' expected
        assertEquals(clashedSet, medicineClash.Of(customers));
                    ^
MedicineClashTest.java:28: error: not a statement
        assertEquals(clashedSet, medicineClash.Of(customers));
                     ^
MedicineClashTest.java:28: error: ';' expected
        assertEquals(clashedSet, medicineClash.Of(customers));
                               ^
MedicineClashTest.java:28: error: ';' expected
        assertEquals(clashedSet, medicineClash.Of(customers));
                                                            ^
4 errors
